<resources>
    <string name="app_name" translatable="false">Tabu Plus</string>
    <string name="error_local_cards_unavailable">Local cards file doesn\'t exist and couldn\'t reach the remote database. Check your internet connection.</string>
    <string name="label_score">Score: %1$d</string>
    <string name="pass_count" translatable="false">(%1$d)</string>
    <string name="team_up_description">Do your best to have an even number of people on each team. You also want to try to make the teams even in regards to skill level. Remember that each team must have someone from the other team to prevent cheating. So, position accordingly.</string>
    <string name="team_up_title">Team Up</string>
    <string name="white_dialog_indicator">Indicator of the dialog you are seeing.</string>
    <string name="app_s_logo">App\'s logo</string>
    <string name="main_word">Main word</string>
    <string name="related_word">Related Word</string>
    <string name="_120" translatable="false">120</string>
    <string name="pause_icon">Pause icon</string>
    <string name="team_a">Team A</string>
    <string name="score_0">Score: 0</string>
    <string name="correct_button">Correct button</string>
    <string name="_3" translatable="false">(3)</string>
    <string name="false_icon">False icon</string>
    <string name="pass_icon">Pass icon</string>
    <string name="winner">Winner</string>
    <string name="game_summary">Game Summary</string>
    <string name="team_b">Team B</string>
    <string name="continue_button_text">CONTINUE</string>
    <string name="new_game_button_text">NEW GAME</string>
    <string name="settings_button_text">SETTINGS</string>
    <string name="help_button_text">HELP</string>
    <string name="settings">Settings</string>
    <string name="settings_time_limit_hint">Time Limit (20 - 240)</string>
    <string name="settings_pass_hint">Pass (0 - 6)</string>
    <string name="settings_false_point_penalty_hint">False Point Penalty</string>
    <string name="settings_winning_point_hint">Winning Point</string>
    <string name="back_button">Back button</string>
    <string name="save_button_text">SAVE</string>
    <string name="download_latest_cards_button_text">Download latest cards button</string>
    <string name="settings_select_card_language_hint">Select card language</string>
    <string name="company_name">Company name</string>
    <string name="start_playing_title">Start Playing</string>
    <string name="start_playing_description">Name your teams and start the game. The clue-giver of \'Team A\' must describe the word, without saying any of the words with white background on the card. Clue-giver will change every turn in each team. First team to reach the \'Win Score\' wins.</string>
    <string name="gray_dialog_indicator">Gray dialog indicator</string>
    <string name="team_names">Team Names</string>
    <string name="start_button_text">START</string>
    <string name="turn_summary">Turn Summary</string>
    <string name="correct">Correct</string>
    <string name="false_text">False</string>
    <string name="points">Points</string>
</resources>